[package]
name = "rust-tdshim"
version = "0.1.0"
authors = [
    "Jiewen Yao <jiewen.yao@intel.com>",
    "Xiaoyu Lu <xiaoyux.lu@intel.com>"
    ]
edition = "2018"

# add build process
build = "build.rs"

[build-dependencies]
cc = { version = "1.0.62", default-features = false }
rust-td-layout = { path = "../rust-td-layout" }
tdx-tdcall = { path = "../tdx-tdcall" }

[dependencies]
r-efi = "3.2.0"
linked_list_allocator = "0.8.11"
log = "0.4.13"
elf-loader = { path = "../elf-loader" }
pe-loader = { path = "../pe-loader" }
r-uefi-pi =  { path = "../r-uefi-pi" }
uefi-pi =  { path = "../uefi-pi" }
tdx-tdcall = { path = "../tdx-tdcall" }
tdx-logger =  { path = "../tdx-logger" }
tdx-exception =  { path = "../tdx-exception" }
rust-td-layout = { path = "../rust-td-layout" }
paging = { path = "../rust-paging" }
ring = { git="https://github.com/jyao1/ring", branch="uefi_support" }
scroll = { version = "0.10", default-features=false }

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]
